webgl: CopyToPlatformTexture needs to respect is_origin_top_left_

Fixes inversion when using toDataUrl with GL_MESA_framebuffer_flip_y.

BUG=877159
TEST=khronos webgl conformance tests in browser

Change-Id: Ic6d765db7d7f02b6c1ec0f9996994f3851e721a0
Reviewed-on: https://chromium-review.googlesource.com/1194787
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Fritz Koenig <frkoenig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586914}
Former-commit-id: c1207bb85c5070974226524566ee2d6c200bbc10